[project]
name = "tinyurl-mcp-server"
version = "0.1.0"
description = "MCP Server for tinyurl.com"
requires-python = ">=3.13"
authors = [
    { name = "Vimal Paliwal", email = "vimalpaliwal.me@gmail.com" }
]
dependencies = [
    "dateparser>=1.2.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.13.1",
    "pydantic>=2.11.7",
]

[project.scripts]
tinyurl-mcp-server = "mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
